--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.project.medical</groupId>
 	<artifactId>medical</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>medical</name>
 	<description>Medical project for Capstone</description>
 	<properties>
